Remove environment variables for logging that is now stored in settings